Fixed spacing issue

--- a/css/main.css
+++ b/css/main.css
@@ -363,6 +363,24 @@ PAGE: CONTACT
     margin-bottom: 20px;
 }
 
+#space_wrapper {
+    display: flex;
+    flex-flow: column;
+    height: 100% !important;
+}
+
+.top {
+    flex: 0 0 auto;
+}
+
+.middle {
+    flex: 1 1 auto;
+}
+
+.bottom {
+    flex: 0 0 auto;
+}
+
 .contact-info {
     list-style: none;
     padding: 0;
